refactor : 추천 프로젝트 api 리팩토링 #45